--- a/src/main/webapp/app/admin/user-management/list/user-management.component.html
+++ b/src/main/webapp/app/admin/user-management/list/user-management.component.html
@@ -1,4 +1,8 @@
-<div>
+<div style="
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 40px;
+">
   <h2>
     <span id="user-management-page-heading" data-cy="userManagementPageHeading">Users</span>
 
