--- a/src/main/webapp/app/board/board.component.html
+++ b/src/main/webapp/app/board/board.component.html
@@ -2,7 +2,7 @@
     <div class="board">
 
         <div class="board-bar">
-            <span class="board-name">Project  {{ board.name }}</span>
+            <span class="board-name"> {{ board.name }}</span>
         
             <button class="btn btn-primary" style ="float: right; margin-right: 10%;" (click)="createTask()">Create Task</button>
         </div>
