--- a/src/main/webapp/app/show-task/show-task.component.scss
+++ b/src/main/webapp/app/show-task/show-task.component.scss
@@ -1,10 +1,7 @@
 .edit-form{
-    margin-left: 20%;
-    margin-right: 20%;
     display: flex;
     flex-direction: column;
     height: 100%;
-    align-items: center ;
     margin-top: 5%;
     margin-bottom: 10%;
 }
@@ -20,12 +17,7 @@
     align-self: center;
 
 }
-.form-control{
-    align-self:  center !important ;
-    width: 100%;
-
-}
-.form{
+.formStyles{
     align-self: center;
     width: 100%;
     margin-left: 20%;
@@ -38,8 +30,4 @@
     
     align-items: center;
     align-self: center !important;
-}
-.checkbox{
-    padding-right: 10%;
-    margin-right: 20%;
 }
