--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -3,6 +3,26 @@
 @import '~bootswatch/dist/lux/variables';
 @import '~bootstrap/scss/variables';
 
+@import '~@angular/material/theming';
+
+@include mat-core();
+$Angular-Material-Test-primary: mat-palette($mat-indigo);
+$Angular-Material-Test-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$Angular-Material-Test-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$Angular-Material-Test-theme: mat-light-theme(
+  $Angular-Material-Test-primary,
+  $Angular-Material-Test-accent,
+  $Angular-Material-Test-warn
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($Angular-Material-Test-theme);
 /* ==============================================================
 Bootstrap tweaks
 ===============================================================*/
