--- a/src/main/webapp/app/show-task/show-task.component.html
+++ b/src/main/webapp/app/show-task/show-task.component.html
@@ -1,74 +1,100 @@
     <div  class="edit-form">
-      <div class="child" style="display: block; width: 100%;">
-        <span class="header">Task</span>
-        <button mat-raised-button class="btn headerbtn" style="align-self: flex-end;" (click)="goBack()" color="warn">    
-          <fa-icon icon="arrow-left"></fa-icon> go Back        
-        </button></div>
-
-        <form class= "formStyles" name="taskForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="taskForm">
-          <div>
-            <alert-error></alert-error>
-    
-            <div class="form-group" [hidden]="!task.id">
-              <label>ID</label>
-              <input type="text" class="form-control" name="id" formControlName="id" readonly />
-            </div>
-    
-            <div class="form-group">
-              <label class="form-control-label">Name</label>
-              <input type="text" class="form-control" name="name" formControlName="name" />
-    
-              <div *ngIf="taskForm.get('name')!.invalid && (taskForm.get('name')!.dirty || taskForm.get('name')!.touched)">
-                <small class="form-text text-danger" *ngIf="taskForm.get('name')?.errors?.required"> This field is required. </small>
-                <small class="form-text text-danger" *ngIf="taskForm.get('name')?.errors?.maxlength">
-                  This field cannot be longer than 50 characters.
-                </small>
-              </div>
-            </div>
-    
-            <div class="form-group">
-              <label class="form-control-label">Description</label>
-              <input type="text" class="form-control" name="description" formControlName="description" />
-    
-              <div *ngIf="taskForm.get('description')!.invalid && (taskForm.get('description')!.dirty || taskForm.get('description')!.touched)">
-                <small class="form-text text-danger" *ngIf="taskForm.get('description')?.errors?.maxlength">
-                  This field cannot be longer than 50 characters.
-                </small>
-              </div>
-            </div>
-    
-            <div class="form-group">
-              <label>Deadline Date</label>
-              <input type="date" class="form-control" name="date" formControlName="date" />
-            </div>
-    
-          
-            <div class="form-group" >
-              <label for="assignedTo" >Assign To</label>
-              <div style="display: block;">
-                <mat-select style="width: 70%; margin-right: 5%;" type= "select" formControlName="assignedTo" id="assignedTo" name="assignedTo" >
-                <mat-option *ngFor="let user of users"  [value]="user.id" >
-                  {{ user.email }}
-                </mat-option>
-              </mat-select>
-            <button  class="btn btn-primary" type="button" (click)="assignToMe()">
-              Assign to me
+      <div class="row">
+        <div class="column">
+          <div class="child" >
+            <span class="header">Task</span>
+            <button mat-raised-button class="btn headerbtn" style="align-self: flex-end;" (click)="goBack()" color="warn">    
+              <fa-icon icon="arrow-left"></fa-icon> <span> go Back</span>    
             </button>
           </div>
+          <form class= "formStyles" name="taskForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="taskForm">
+                <alert-error></alert-error>
+        
+                <div class="form-group" *ngIf="task">
+                  <label>ID</label>
+                  <input type="text" class="form-control" name="id" formControlName="id" readonly />
+                </div>
+        
+                <div class="form-group">
+                  <label class="form-control-label">Name</label>
+                  <input type="text" class="form-control" name="name" formControlName="name" />
+        
+                  <div *ngIf="taskForm.get('name')!.invalid && (taskForm.get('name')!.dirty || taskForm.get('name')!.touched)">
+                    <small class="form-text text-danger" *ngIf="taskForm.get('name')?.errors?.required"> This field is required. </small>
+                    <small class="form-text text-danger" *ngIf="taskForm.get('name')?.errors?.maxlength">
+                      This field cannot be longer than 50 characters.
+                    </small>
+                  </div>
+                </div>
+        
+                <div class="form-group">
+                  <label class="form-control-label">Description</label>
+                  <input type="text" class="form-control" name="description" formControlName="description" />
+        
+                  <div *ngIf="taskForm.get('description')!.invalid && (taskForm.get('description')!.dirty || taskForm.get('description')!.touched)">
+                    <small class="form-text text-danger" *ngIf="taskForm.get('description')?.errors?.maxlength">
+                      This field cannot be longer than 50 characters.
+                    </small>
+                  </div>
+                </div>
+        
+                <div class="form-group">
+                  <label>Deadline Date</label>
+                  <input type="date" class="form-control" name="date" formControlName="date" />
+                </div>
+        
               
-          </div>
-            <button type="button" class="btn btn-secondary" (click)="goBack()">
-              <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
-            </button>
-    
-            <button type="submit" [disabled]="taskForm.invalid || isSaving" class="btn btn-primary">
-              <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
-            </button>
-          </div>
-        </form>
+                <div class="form-group" >
+                  <label for="assignedTo" >Assign To</label>
+                  <div style="display: block;">
+                    <mat-select style="width: 70%; margin-right: 5%;" type= "select" formControlName="assignedTo" id="assignedTo" name="assignedTo" >
+                    <mat-option *ngFor="let user of users"  [value]="user.id" >
+                      {{ user.email }}
+                    </mat-option>
+                  </mat-select>
+                <button  class="btn btn-primary" type="button" (click)="assignToMe()">
+                  Assign to me
+                </button>
+              </div>
+                  
+              </div>
+                <button type="button" class="btn btn-secondary" (click)="goBack()">
+                  <fa-icon icon="ban"></fa-icon>&nbsp;<span>Cancel</span>
+                </button>
+        
+                <button type="submit" [disabled]="taskForm.invalid || isSaving" class="btn btn-primary">
+                  <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
+                </button>
+          </form>
     </div>
+    <div class="column">
+      <div class="commentSection">
+        <span class="header">Comments</span>
+      <div class="panel " *ngFor="let comment of comments">
+          <div class="post-heading">
+        
+              <div class="pull-left meta">
+                  <div class="title">
+                      {{comment.createdBy?.email}}
+                     
+                      <span class="text-muted time">{{comment.createdOn | date:'yyyy-MM-dd' }}</span>
+                  </div>
+              </div>
+          </div> 
+          <div> 
+              <p>{{comment.description}}</p>
+    
+          </div>
+      </div>
+    
+    <div><input #commentnew type="text" class="form-control comment" name="description">
+    <button  type="button" class="btn btn-secondary" (click)="addComment(commentnew.value)">Add Comment</button>
+    </div>
+  </div>
+</div>
+</div>
+</div>
   
-
 
    
 
