--- a/src/main/webapp/app/show-task/show-task.component.scss
+++ b/src/main/webapp/app/show-task/show-task.component.scss
@@ -1,29 +1,46 @@
-.edit-form{
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .column {
     display: flex;
     flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
+//   .double-column {
+//     display: flex;
+//     flex-direction: column;
+//     flex-basis: 100%;
+//     flex: 2;
+//   }
+
+
+.edit-form{
     height: 100%;
     margin-top: 5%;
     margin-bottom: 10%;
 }
 .headerbtn{
-    margin-left:31%;
+    margin-left: 65%;
 }
 .header{
-    margin-left: 25%;
     font-size: 2em;
 }
 .child{
-    width: 100%;
-    align-self: center;
-
+ margin-left: 10%
 }
 .formStyles{
-    align-self: center;
-    width: 100%;
-    margin-left: 20%;
-    margin-right: 20%;
-    padding-left: 25%;
-    padding-right: 25%;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+
+.commentSection{
+    margin-right: 10%;
+    margin-left: 10%;
 }
 .form-group{
     width: 100%;
