wykresy almost done

--- a/src/main/webapp/app/statistics/piechartUsers/pie-chart.component.html
+++ b/src/main/webapp/app/statistics/piechartUsers/pie-chart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; width: 400px;">
+<div style="display: block;width: 70%;">
     <canvas mdbChart
         [chartType]="chartType"
         [datasets]="chartDatasets"
