--- a/src/main/webapp/app/statistics/statistic.component.scss
+++ b/src/main/webapp/app/statistics/statistic.component.scss
@@ -1,5 +1,35 @@
-.xd{
-height: 100px !important; 
-width: 100px !important;
 
-}
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 5%;
+    width: 100%;
+
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
+
+  .wider-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 3;
+  }
+
+
+  .doublchart{
+      width: 30%;
+  }
+  .some-page-wrapper {
+    margin: 5%;
+  }
+  
+
