--- a/src/main/webapp/app/user-view/board/board.component.html
+++ b/src/main/webapp/app/user-view/board/board.component.html
@@ -17,14 +17,17 @@
                          id = "{{column.id}}"
                          [cdkDropListData]="column.tasks"
                          (cdkDropListDropped)="drop($event)">
-                        <div class="task" id="{{task.id}}" [ngStyle]="{'background-color': task.isCompleted ? '#90EE90 ': 'white'}" *ngFor="let task of column.tasks" (click)="showTask(task)" cdkDrag>
+                        <div class="task" id="{{task.id}}" [ngStyle]="{'background-color': task.completed ? '#90EE90 ': 'white'}" 
+                        *ngFor="let task of column.tasks" 
+                        (click)="showTask(task)" 
+                        [cdkDragDisabled]="task.completed" cdkDrag>
                              <span class="task-child" >{{task.name}}</span>
                              <div class="verticalLine">
                                assigned To:
                                <span *ngIf=task.assignedTo class="assignedTo" [ngStyle]="{'color': task.assignedTo.email === this.user.email ? 'red ': 'black'}" >
                                 {{task.assignedTo.email}}</span>
-                                <span *ngIf="task.assignedTo?.email === this.user.email">Task Assigned To You!</span>
-                            <span *ngIf="task.isCompleted"  style="margin-left:20%; color: cadetblue;"><fa-icon icon="check"></fa-icon>  Task Completed</span>
+                                <span *ngIf="task.assignedTo?.email === this.user.email">Task Assigned To You!</span> <br>
+                            <span *ngIf="task.completed"  style="margin-left:1%; color: cadetblue; "><fa-icon icon="check"></fa-icon>  Task Completed</span>
                               </div>
                         </div>
                     </div>
