--- a/src/main/webapp/app/user-view/show-task/show-task.component.html
+++ b/src/main/webapp/app/user-view/show-task/show-task.component.html
@@ -52,7 +52,7 @@
                       {{ user.email }}
                     </mat-option>
                   </mat-select>
-                <button  class="btn btn-primary" type="button" (click)="assignToMe()">
+                <button  *ngIf="params!=-1" class="btn btn-primary" type="button" (click)="assignToMe()">
                   Assign to me
                 </button>
               </div>
@@ -67,7 +67,7 @@
                 </button>
           </form>
     </div>
-    <div class="column">
+    <div   *ngIf="params!=-1" class="column">
       <div class="commentSection">
         <span class="header">Comments</span>
       <div class="panel " *ngFor="let comment of comments">
