--- a/src/main/webapp/app/user-view/statistics/linecharttask/line-chart.component.html
+++ b/src/main/webapp/app/user-view/statistics/linecharttask/line-chart.component.html
@@ -1,9 +1,8 @@
 <div style="display: block; width: 80%;">
     <canvas mdbChart
         [chartType]="chartType"
-        [datasets]="chartDatasets"
+        [datasets]="dataSets"
         [labels]="chartLabels"
-        [colors]="chartColors"
         [options]="chartOptions"
         [legend]="true"
         (chartHover)="chartHovered($event)"
