--- a/src/main/webapp/app/user-view/statistics/linechartusers/line-chart-user.component.html
+++ b/src/main/webapp/app/user-view/statistics/linechartusers/line-chart-user.component.html
@@ -1,11 +1,11 @@
 <div style="display: block; width: 80%;">
     <canvas mdbChart
         [chartType]="chartType"
-        [datasets]="chartDatasets"
+        [datasets]="dataSets"
         [labels]="chartLabels"
         [options]="chartOptions"
         [legend]="true"
         (chartHover)="chartHovered($event)"
         (chartClick)="chartClicked($event)">
     </canvas>
-  </div>
+</div>
