--- a/src/main/webapp/app/user-view/statistics/statistic.component.html
+++ b/src/main/webapp/app/user-view/statistics/statistic.component.html
@@ -1,33 +1,28 @@
 <div class='some-page-wrapper'>
-    <h2>Statistics</h2>
-    <div class='row'>
-    
-      <div class='column'>
-            Project : {{board.name}}<br>
-            Columns: <br>
-            <div *ngFor="let card of cardsAndCount | keyvalue">
-              <span> Column {{card.key}} containing {{card.value}} tasks </span>
-            </div>
-            
-      </div>
-      <div class="column">
-        <pie-chart class="singlechart"></pie-chart>
-      </div> 
-      <div class="column">
-        <pie-chart-column class="doublechart"></pie-chart-column>
+  <h2>Statistics</h2>
+  <div class='row'>
+    <div class='column'>
+          Project : {{board?.name}}<br>
+          Columns: <br>
+          <div *ngFor="let card of cardsAndCount | keyvalue">
+            <span> Column {{card.key}} containing {{card.value}} tasks </span>
+          </div> 
+    </div>
+    <div class="column">
+      <pie-chart class="singlechart"></pie-chart>
     </div>
 
-        <div class="column">
- 
-        <pie-chart-user class="doublechart"></pie-chart-user>
+      <div class="column">
 
-      </div>
+      <pie-chart-column class="singlechart"></pie-chart-column>
     </div>
+  </div>
     <div class='row 2'>
       <div class='column'>
         <div class='wrap-padding-column'>
             Task life Cycle 
             pick a task stats you want to see
+            <br>
             <mat-form-field>
 
               <mat-select type= "select"        
@@ -41,8 +36,8 @@
               </mat-select>
             </mat-form-field>
             <div *ngFor="let task of checkedTasks.value">
-            <span>{{task.id}}. {{ task.name }}</span>              
-            <line-chart-task class="xd"> </line-chart-task>
+            <span>{{task.id}}. {{ task.name }}  {{task.card.name}}</span>              
+            <line-chart-task class="xd" [taskId]= "task.id"> </line-chart-task>
             </div>          
           </div>
       </div>
