--- a/src/main/webapp/app/user-view/home/home.component.html
+++ b/src/main/webapp/app/user-view/home/home.component.html
@@ -1,5 +1,9 @@
 <div  style="align-self: center;">
+  <div class="header">
+    <span class="logo-img"></span>
     <h1 class="flex-chlid-header ">Welcome in Task Manager!</h1>
+  </div>
+  
     <div  [ngSwitch]="isAuthenticated()">
       <div class="row" *ngSwitchCase="true" >
         <span class="flex-chlid-subheader" id="home-logged-message" *ngIf="account">Hi,{{ account.firstName }} {{account.lastName}}
