interface is being described

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,2 +1,4 @@
-<div class="footer">
+<div style="display:flex;" class="footer">
+    <span style="display:flex; width: 30%; margin-left: 45%;"> Copyright © Task Manager</span> 
+    <span style="display:flex; "> Contact: +48 000 000 000  Daniel Drapała</span>
 </div>
