--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -5,11 +5,10 @@
   <router-outlet name="navbar"></router-outlet>
 </div>
 
-<div class="child container-fluid" style="align-self: flex-end;" [style.background-color]="getBackgroundColor()" >
+<div class="child container-fluid" style="align-self: flex-end;"  >
   <div class="card jh-card">
     <router-outlet></router-outlet>
   </div>
 </div>
-<footer class="footer" [style.background-color]="getBackgroundColor()"></footer>
 
 </div>
