--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -60,11 +60,17 @@ body {
     height: inherit;
 
   }
-  .footer{
-    
-  }
 }
 
+.footer{
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  height: 40px;
+}
+.form-control{
+  max-width: 600px;
+}
 a:hover {
   /* make sure browsers use the pointer cursor for anchors, even with no href */
   cursor: pointer;
